--- a/apps/blog/templates/tag_edit.html
+++ b/apps/blog/templates/tag_edit.html
@@ -3,7 +3,7 @@
 
 <h1>Add Tag</h1>
 
-<form action="{% url 'blog:tag-create' %}" method="POST">
+<form action="{{ action }}" method="POST">
     {% csrf_token %}
     <ul>
         {{ form.as_ul }}
